Render Bug #119911

Closed
opened 2024-03-26 11:20:47 +01:00 by Aspirata · 7 comments

System Information
Operating system: Windows 11. I asked my friend to test this and he has windows 10
Graphics card: 2060

Blender Version
Broken: Blender 4.1, blender 4.0.

Short description of error
I can't render anything.

Exact steps for others to reproduce the error
Open the file and try to render an image. After that you'll get an empty output

**System Information** Operating system: Windows 11. I asked my friend to test this and he has windows 10 Graphics card: 2060 **Blender Version** Broken: Blender 4.1, blender 4.0. **Short description of error** I can't render anything. **Exact steps for others to reproduce the error** Open the file and try to render an image. After that you'll get an empty output
Aspirata added the
Priority
Normal
Type
Report
Status
Needs Triage
labels 2024-03-26 11:20:48 +01:00

This report does not contain all the requested information, which is required for us to investigate the issue.

Please submit a new report and carefully follow the instructions. Be sure to provide system information, Blender version, the last Blender version which worked, and a .blend file with exact steps to reproduce the problem.

A guideline for making a good bug report can be found at https://developer.blender.org/docs/handbook/bug_reports/making_good_bug_reports/

This report does not contain all the requested information, which is required for us to investigate the issue. Please submit a new report and carefully follow the instructions. Be sure to provide system information, Blender version, the last Blender version which worked, and a .blend file with exact steps to reproduce the problem. A guideline for making a good bug report can be found at https://developer.blender.org/docs/handbook/bug_reports/making_good_bug_reports/
Blender Bot added
Status
Archived
and removed
Status
Needs Triage
labels 2024-03-26 11:23:00 +01:00
Author

But I provided all the information, except the last blender version which worked, but it doesn't really depend on the version, i think. btw if you will change composite to viewlayer, it will display the rendered image, but even if i disable everything in compositing, i still have this bug

But I provided all the information, except the last blender version which worked, but it doesn't really depend on the version, i think. btw if you will change composite to viewlayer, it will display the rendered image, but even if i disable everything in compositing, i still have this bug
Author

I did some research and found out that everything works on 4.2, but still doesn't work on 4.0 and 4.1

I did some research and found out that everything works on 4.2, but still doesn't work on 4.0 and 4.1
Aspirata reopened this issue 2024-03-28 12:31:14 +01:00
Blender Bot added
Status
Needs Triage
and removed
Status
Archived
labels 2024-03-28 12:31:17 +01:00
Author

Maybe it's because I opened file from 4.2 on 4.1 and 4.0 ?

Maybe it's because I opened file from 4.2 on 4.1 and 4.0 ?

I can not confirm your issue locally.

I can not confirm your issue locally.
Author

So you can see the final render ?

So you can see the final render ?

I can confirm issue. Chunksize property in performance settings of compositor are causes of disappearing result image. This is because the reason that in current state of the file this property setted to a '' value.

I can confirm issue. `Chunksize` property in performance settings of compositor are causes of disappearing result image. This is because the reason that in current state of the file this property setted to a `''` value.
Iliya Katushenock added
Module
VFX & Video
Status
Confirmed
and removed
Status
Needs Triage
Interest
VFX & Video
labels 2024-03-28 12:45:21 +01:00
Iliya Katushenock added this to the 4.1 milestone 2024-03-28 12:58:25 +01:00
Iliya Katushenock added the
Interest
Compatibility
label 2024-03-28 12:58:33 +01:00
Blender Bot added
Status
Resolved
and removed
Status
Confirmed
labels 2024-04-04 13:14:25 +02:00
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
2 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#119911
No description provided.